Change IO directory for integration util to be a directory in target
Change-Id: I3dfb74dd4228725fb624eb1d21f621b7855f3d37
Reviewed-on: https://asterix-gerrit.ics.uci.edu/1789
Sonar-Qube: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Tested-by: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
BAD: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Integration-Tests: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Reviewed-by: Michael Blow <mblow@apache.org>
Reviewed-by: Till Westmann <tillw@apache.org>